[metadata]
name = openplantbook_sdk
version = 0.1
author = Slava Pisarevskiy
author_email = slava@plantbook.io
description = Open Plantbook SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/slaxor505/open-plantbook-sdk-py
keywords = json, timeseries, iot, jts
license = MIT
classifiers =
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Operating System :: OS Independent
project_urls=
        Documentation = https://open-plantbook-sdk.readthedocs.io
        Source = https://github.com/slaxor505/open-plantbook-sdk-py

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
;install_requires =
;    python-dateutil

;[options.package_data]
;* = *.txt, *.rst
;hello = *.msg
;
;[options.entry_points]
;console_scripts =
;    executable-name = my_package.module:function

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    openplantbook_sdk.tests*
